[package]
name = "clapscan"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "6.0"
eframe = "0.33"
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["ico"] }
async-trait = "0.1"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"
sha1 = "0.10.6"
md-5 = "0.10.6"
scrypt = "0.11.0"
sha2 = "0.10.9"
base64 = "0.22.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"

[build-dependencies]
winres = "0.1"
